--- a/css/custom.css
+++ b/css/custom.css
@@ -28,3 +28,54 @@ div.form-wrap #form-login #submit-buton input.button {
     max-width: 100%;
     height: 100px;
 }
+.top_teams_logos .t4-module {
+    padding: .0rem;
+    margin: 0px;
+    background-color: #f6c119;
+background-image: linear-gradient(90deg, #f6c119 0%, #fadc06 55%, #e7e51f 100%);
+
+}
+.not-at-top #t4-header.t4-sticky {
+    background-color: #fff;
+    box-shadow: 0 5px 15px 0 rgb(0 0 0 / 5%);
+    -webkit-box-shadow: 0 5px 15px 0 rgb(0 0 0 / 5%);
+    -moz-box-shadow: 0 5px 15px 0 rgba(0,0,0,.05);
+    backdrop-filter: blur(15px) !important;
+}
+#t4-header {
+    background-color: rgba(243,243,243, 0.8) !important;
+    backdrop-filter: blur(15px) !important;
+}
+#t4-header .chosen-container .chosen-drop, #t4-header .chosen-container .chzn-drop, #t4-header .chzn-container .chosen-drop, #t4-header .chzn-container .chzn-drop {
+    border: 1px solid #E5E7EB;
+    border-radius: 0.572rem;
+    padding: 10px;
+    z-index: 2000000 !important;
+    font-size: 1rem;
+}
+#t4-header .sb-horizontal.ja-mg-sidebar {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background: #fff;
+    border-radius: 0.572rem;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border: 1px solid #E5E7EB;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    padding: 0;
+    z-index: 10000 !important;
+    position: relative;
+    margin-left: 1.143rem;
+}
+.btn.btn-default, .blog-list .item-readmore a.btn-default, .acym_module_form input.btn-default.btn, #acym_wrapper .acym__front__archive #acym__front__archive__search button.btn-default {
+    border: 1px solid var(--color-primary);
+    color: var(--color-primary);
+}
+.acm-clients{
+    border-radius: 0px !important;
+}
