--- a/css/custom.css
+++ b/css/custom.css
@@ -194,8 +194,8 @@ box-shadow: 0 1px 15px rgb(0 0 0 / 14%);
 }
 .jv_breadcrumbs {
     color: #dfddf6;
-    background-color: #252525;
-    background-image: linear-gradient(160deg, #000 0%, #252525 100%);padding:10px;
+    background-color: #d50032;
+    background-image: linear-gradient(160deg, #d50032 0%, #252525 100%);padding:10px;
 }
 .breadcrumb .fa-home {
     color: #e7e51f;
@@ -335,14 +335,13 @@ div[id*="t4-section-"] .section-title-wrap .section-title:before, div[id^="t4-se
     margin-bottom: 1.5rem!important;
 }
 .listing-sidebar {
-    box-shadow: 0 1px 4px 0 rgb(0 0 0 / 15%);
-    border: 1px solid #E5E7EB;
+    border: none;
     border-radius: 0.572rem;
     position: -webkit-sticky;
     position: sticky;
     top: 1.714rem;
 }
-.view-listing-detail .short-info {background: linear-gradient(90deg,#fff,#f1f1f1);padding: 30px;}
+.view-listing-detail .short-info {-webkit-border-top-left-radius: 50px;-moz-border-radius-topleft: 50px;box-shadow: 10px 10px 10px rgb(0 0 0 / 5%);border-top-left-radius: 120px;background: linear-gradient(180deg,#FFF4F2 0%,#FFFFFF 100%);padding: 30px;}
 .view-listing-detail .short-info {
     margin-bottom: 0rem;
     
@@ -398,22 +397,23 @@ border-radius: 100%;
 .listing-sidebar .contact-detail ul li {
     display: -webkit-box;
     display: -ms-flexbox;
+    border-bottom: 6px solid #f5efeb;
     padding: 5px;
-    border: 1px solid rgba(227,225,226,0.5);
-    background: #f8f8f8;
+    background: linear-gradient(265deg,#FFF4F2 0%,#FFFFFF 100%);
     display: flex;
 }
 .listing-sidebar .contact-detail ul li + li {
     margin-top: 0.5rem;
 }
 .player-position {
-    background: #F3F4F6;
     border-radius: 0.572rem;
-    color: #374151;
+    color: #fff;
     font-weight: 700;
+    background-image: linear-gradient(160deg, #e7e51f 0%, #ff6a87 100%);
     display: inline-block;
     padding: 2px 8px;
-    font-size: 12px;
+    color:#313131;
+    font-size: 16px;
 }
 .category-name [itemprop="genre"] {
     font-weight: 700;
@@ -456,7 +456,7 @@ border-radius: 100%;
 }
 .player-socials a {
     background: var(--color-secondary);
-    border-radius: 0.572rem;
+    border-radius: 50%;
     border: 0;
     color: #fff;
     display: inline-block;
@@ -470,10 +470,76 @@ border-radius: 100%;
     list-style: none;
 }
 .item-style-3 .jacl-item__inner {
-    background: linear-gradient(90deg,#fff,#f1f1f1);}
+    -webkit-border-top-left-radius: 50px;
+    -webkit-border-bottom-left-radius: 50px;
+    -moz-border-radius-topleft: 50px;
+    -moz-border-radius-bottomleft: 50px;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    background: linear-gradient(248deg, #ffe4e3 0%, #ffeacc 100%);
+    }
 .small-gutters .item-style-3 {
     margin-bottom: 5px;
 }
 .team-mates {
     padding: 1.714rem;
+}
+.jacl-layout * {
+    color: #212121;
+    font-weight: 800;
+    box-sizing: border-box;
+}
+#t4-main-body {
+    background: linear-gradient(180deg,#FFF4F2 0%,#FFFFFF 100%);
+}
+.listing-sidebar .contact-detail h5{
+    font-weight: 800;
+    color: #fff;
+    background-image: linear-gradient(160deg, #d50032 0%, #252525 100%);
+    padding: 10px;
+    box-shadow: 10px 10px 10px rgb(0 0 0 / 5%);
+}
+.team-mates h5{
+    font-weight: 800;
+    color: #fff;
+    background-image: linear-gradient(160deg, #d50032 0%, #252525 100%);
+    box-shadow: 10px 10px 10px rgb(0 0 0 / 5%);
+    padding: 10px;
+    margin-bottom: 15px;
+}
+
+.short-info{
+    padding-top: 30px;
+    background-image: url(../../../images/design/lines-grid-svg5.svg);
+    background-position: bottom center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color:#060050 ;
+}
+.short-info .bg-overlay {
+    opacity: 0.05;
+}
+#t4-footnav .bg-overlay {
+    opacity: 0.5;
+}
+.player_bio{
+    opacity: 1 !important;
+}
+.share-social .social-inner {
+    margin-bottom: 20px;
+    background: #fff;
+}
+.player_bio .page-header h2{
+    margin: 0 0 0rem;
+    color: #fff;
+}
+.jl-Sponsors{
+    max-width: 1376px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin: 0 auto;
+    padding: 4.5rem 0 2rem;
+    position: relative;
 }
