--- a/css/custom.css
+++ b/css/custom.css
@@ -18,7 +18,7 @@ div.form-wrap #form-login #submit-buton input.button {
 .t4-megamenu.animate.slide .dropdown>.dropdown-menu {
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    margin-top: 20px !important;
+    margin-top: -15px !important;
 }
 .chosen-container-single .chosen-drop {
     margin-top: 10px;
@@ -242,18 +242,18 @@ padding-left: 20px!important;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     padding-left: 20px;
-    color: #fff !important;
+    color: #313131 !important;
     border-radius: 3px;
-    background-image: linear-gradient(90deg, #F76B1C 0%, #f06424 100%);
+    background-image: linear-gradient(90deg, #d9d9d3 0%, #f7f7f7 100%);
 }
 .t4-megamenu .dropdown-menu li > a:hover{
-    color: #fff!important;
+    color: #313131!important;
     border-radius: 3px;
     padding-left: 20px;
     -webkit-border-radius: 3px;
 transition-property: margin-right, #F76B1C;
     -moz-border-radius: 3px;
-    background-image: linear-gradient(90deg, #F76B1C 0%, #f06424 100%);
+    background-image: linear-gradient(90deg, #d9d9d3 0%, #f7f7f7 100%);
 }
 
 .mega-nav img {
@@ -300,7 +300,7 @@ transition-property: margin-right, #F76B1C;
     max-width: 61%;
 }
 .nav-link img {
-    max-width: 40%;
+    max-width: 15%;
     height: auto;
     margin-bottom: 0px;
     float: left;
@@ -581,7 +581,7 @@ border-radius: 100%;
     width: 32px;
 }
 .player-highlight-position{
-    player-highlight-position
+    
 }
 .player-highlight-team {
     font-size: 0.857rem;
